[package]
name = "openc2"
version = "0.1.0"
edition = "2024"
authors = ["Ted Driggs <t.driggs@outlook.com>"]
license = "MIT"
repository = "https://github.com/TedDriggs/openc2-rs"
description = "Rust types for OpenC2 commands and responses"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
from_variants = "1.0.2"
serde_with = "3.14.0"
indexmap = { version = "2.11.0", features = ["serde"] }
serde_json = "1.0.143"
